Added slogan  and jazzed some things up

--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.css
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.css
@@ -8,3 +8,13 @@
     max-width:30%;
     min-width: 250px;
 }
+
+.banner-subhead {
+    color: gray;
+}
+
+.banner-hr {
+    display: block;
+    width:100%;
+    border-width: 4px;
+}
