--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -5,3 +5,15 @@
         </a>
     <div>
 </div>
+
+<div>
+    <p class="banner-subhead"><em>Your world, broken into understandable bits.</em></p>
+    <hr class="banner-hr">
+</div>
+
+<br>
+<div class="container">
+    <div class="navigation-item"><a routerLink="podcasts">Podcasts</a></div>
+    <div class="navigation-item"><a routerLink="technology">Technology</a></div>
+    <div class="navigation-item"><a routerLink="about">About</a></div>
+</div>
