--- a/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
+++ b/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
@@ -1,1 +1,157 @@
+<app-navigation-bar></app-navigation-bar>
+<app-banner></app-banner>
 <p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p><p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+<p>frontpage works!</p>
+
