--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -1,19 +1,21 @@
-<div class="banner">
-    <div class="dbl-background">
-        <a class="banner" routerLink="home">
-            <img src="assets/logo/main_logo.png" class="banner-image">
-        </a>
+<div id="banner">
+    <div class="banner">
+        <div class="dbl-background">
+            <a class="banner" routerLink="home">
+                <img src="assets/logo/main_logo.png" class="banner-image">
+            </a>
+        <div>
+    </div>
+
     <div>
-</div>
+        <p class="banner-subhead"><em>Your world, broken into understandable bits.</em></p>
+        <hr class="banner-hr">
+    </div>
 
-<div>
-    <p class="banner-subhead"><em>Your world, broken into understandable bits.</em></p>
-    <hr class="banner-hr">
-</div>
-
-<br>
-<div class="container">
-    <div class="navigation-item"><a routerLink="podcasts">Podcasts</a></div>
-    <div class="navigation-item"><a routerLink="technology">Technology</a></div>
-    <div class="navigation-item"><a routerLink="about">About</a></div>
+    <br>
+    <div class="container">
+        <div class="navigation-item"><a routerLink="podcasts">Podcasts</a></div>
+        <div class="navigation-item"><a routerLink="technology">Technology</a></div>
+        <div class="navigation-item"><a routerLink="about">About</a></div>
+    </div>
 </div>
