Navbar and banner largely finalized and styled

--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -12,10 +12,10 @@
         <hr class="banner-hr">
     </div>
 
-    <br>
     <div class="container">
-        <div class="navigation-item"><a routerLink="podcasts">Podcasts</a></div>
-        <div class="navigation-item"><a routerLink="technology">Technology</a></div>
-        <div class="navigation-item"><a routerLink="about">About</a></div>
+        <div class="navigation-item"><a class="menu-item" routerLink="podcasts">Podcasts</a></div>
+        <div class="navigation-item"><a class="menu-item" routerLink="technology">Technology</a></div>
+        <div class="navigation-item"><a class="menu-item" routerLink="about">About</a></div>
     </div>
+    <br>
 </div>
