--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.css
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.css
@@ -5,12 +5,15 @@
 }
 
 .banner-image {
-    max-width:30%;
-    min-width: 250px;
+    max-width: 25%;
+    min-width: 200px;
 }
 
 .banner-subhead {
     color: gray;
+    font-family: 'Cairo', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .banner-hr {
