--- a/debuggedlabs-site/src/styles.css
+++ b/debuggedlabs-site/src/styles.css
@@ -13,3 +13,30 @@
 .navigation-item {
   flex: 1;
 }
+
+.menu-item {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+/* unvisited link */
+.menu-item:link {
+  color: #d9d9d9;
+}
+
+/* visited link */
+.menu-item:visited {
+  color: white;
+}
+
+/* mouse over link */
+.menu-item:hover {
+  color: #00ff00;
+  text-decoration: none;
+}
+
+/* selected link */
+.menu-item:active {
+  color: d9d9d9;
+}
