Added page routing and finished navigation

--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -5,7 +5,7 @@
             <img src="assets/logo/main_logo.png" class="navigation-logo">
         </a>
     </div>
-    <div class="navigation-item"><a class="menu-item" routerLink="podcasts">Podcasts</a></div>
-    <div class="navigation-item"><a class="menu-item" routerLink="technology">Technology</a></div>
-    <div class="navigation-item"><a class="menu-item" routerLink="about">About</a></div>
+    <div class="navigation-item"><a class="menu-item" routerLink="/podcasts">Podcasts</a></div>
+    <div class="navigation-item"><a class="menu-item" routerLink="/technology">Technology</a></div>
+    <div class="navigation-item"><a class="menu-item" routerLink="/about">About</a></div>
 </div>
