--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -1,1 +1,25 @@
-<p>podcasts works!</p>
+<app-navigation-bar [show]="true"></app-navigation-bar>
+<div class="page-content-spacing">
+    <p>podcasts works111!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+    <p>podcasts works!</p>
+</div>
+
+
