--- a/debuggedlabs-site/src/app/sections/technology/technology.component.html
+++ b/debuggedlabs-site/src/app/sections/technology/technology.component.html
@@ -1,1 +1,7 @@
-<p>technology works!</p>
+<app-navigation-bar [show]="true"></app-navigation-bar>
+<div class="page-content-spacing">
+    <p>technology works!</p>
+    <p>technology works!</p>
+    <p>technology works!</p>
+    <p>technology works!</p>
+</div>
