--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<app-navigation-bar [show]="true"></app-navigation-bar>
+<div class="page-content-spacing">
+    <p>about works!</p>
+    <p>about works!</p>
+    <p>about works!</p>
+    <p>about works!</p>
+</div>
