--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -1,4 +1,4 @@
-<app-navigation-bar [show]="true"></app-navigation-bar>
+<app-navigation-bar [show]="true" [sectionTitle]="'about'"></app-navigation-bar>
 <div class="page-content-spacing">
     <p>about works!</p>
     <p>about works!</p>
