--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -1,4 +1,4 @@
-<app-navigation-bar [show]="true"></app-navigation-bar>
+<app-navigation-bar [show]="true" [sectionTitle]="'podcasts'"></app-navigation-bar>
 <div class="page-content-spacing">
     <p>podcasts works111!</p>
     <p>podcasts works!</p>
