--- a/debuggedlabs-site/src/app/sections/technology/technology.component.html
+++ b/debuggedlabs-site/src/app/sections/technology/technology.component.html
@@ -1,4 +1,4 @@
-<app-navigation-bar [show]="true"></app-navigation-bar>
+<app-navigation-bar [show]="true" [sectionTitle]="'technology'"></app-navigation-bar>
 <div class="page-content-spacing">
     <p>technology works!</p>
     <p>technology works!</p>
