--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,19 @@
 
 <div id="navbar" *ngIf="show" (scroll)="onWindowScroll($event);" [ngClass]="setClasses()" style="background-color: #000971;">
+
+    <!-- Logo to front page -->
     <div class="navigation-logo-div">
         <a routerLink="/">
             <img src="assets/logo/main_logo.png" class="navigation-logo">
         </a>
     </div>
-    <div class="navigation-item"><a class="menu-item" routerLink="/podcasts">Podcasts</a></div>
-    <div class="navigation-item"><a class="menu-item" routerLink="/technology">Technology</a></div>
-    <div class="navigation-item"><a class="menu-item" routerLink="/about">About</a></div>
+
+    <!-- Show the menu items -->
+    <div class="navigation-item" *ngFor="let item of getMenuItems()">
+        <a [ngClass]="{
+            'menu-item': !item.inactive, 
+            'selected-nav-item': item.inactive
+        }" 
+        routerLink="{{ item.routerLink }}">{{ item.title }}</a>
+    </div>
 </div>
