Added section headers, more configurability with router as single source of truth

--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -1,7 +1,10 @@
 <app-navigation-bar [show]="true" [sectionTitle]="'about'"></app-navigation-bar>
-<div class="page-content-spacing">
-    <p>about works!</p>
-    <p>about works!</p>
-    <p>about works!</p>
-    <p>about works!</p>
-</div>
+
+<!-- Padding under navbar -->
+<div class="page-content-spacing"></div>
+
+<!-- Section header -->
+<app-section-header [sectionTitle]="'About'" 
+                    [iconUrl]="iconUrl"
+                    [backgroundColor]="backgroundColor"
+></app-section-header>
