--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -1,25 +1,33 @@
 <app-navigation-bar [show]="true" [sectionTitle]="'podcasts'"></app-navigation-bar>
-<div class="page-content-spacing">
-    <p>podcasts works111!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-    <p>podcasts works!</p>
-</div>
+
+<!-- Padding under navbar -->
+<div class="page-content-spacing"></div>
+
+<!-- Section header -->
+<app-section-header [sectionTitle]="'Podcasts'" 
+                    [iconUrl]="iconUrl"
+                    [backgroundColor]="backgroundColor"
+></app-section-header>
+
+<p>podcasts works111!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
+<p>podcasts works!</p>
 
 
