--- a/debuggedlabs-site/src/app/sections/technology/technology.component.html
+++ b/debuggedlabs-site/src/app/sections/technology/technology.component.html
@@ -1,7 +1,15 @@
 <app-navigation-bar [show]="true" [sectionTitle]="'technology'"></app-navigation-bar>
-<div class="page-content-spacing">
-    <p>technology works!</p>
-    <p>technology works!</p>
-    <p>technology works!</p>
-    <p>technology works!</p>
-</div>
+
+<!-- Padding under navbar -->
+<div class="page-content-spacing"></div>
+
+<!-- Section header -->
+<app-section-header [sectionTitle]="'Technology'" 
+                    [iconUrl]="iconUrl"
+                    [backgroundColor]="backgroundColor"
+></app-section-header>
+
+<p>technology works!</p>
+<p>technology works!</p>
+<p>technology works!</p>
+<p>technology works!</p>
