--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -14,6 +14,7 @@
             'menu-item': !item.inactive, 
             'selected-nav-item': item.inactive
         }" 
+        [ngStyle]="{'color': item.inactive ? item.selectedColor : ''}"
         routerLink="{{ item.routerLink }}">{{ item.title }}</a>
     </div>
 </div>
