Added icons, section headers are now complete

--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -8,3 +8,11 @@
                     [iconUrl]="iconUrl"
                     [backgroundColor]="backgroundColor"
 ></app-section-header>
+
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
