Added social media icons

--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -17,4 +17,5 @@
         [ngStyle]="{'color': item.inactive ? item.selectedColor : ''}"
         routerLink="{{ item.routerLink }}">{{ item.title }}</a>
     </div>
+     <app-social-media-links></app-social-media-links>
 </div>
