--- a/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
+++ b/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
@@ -1,5 +1,8 @@
 <app-navigation-bar [show]="false" [bannerElementId]="'banner'"></app-navigation-bar>
 <app-banner></app-banner>
+<div class="float-right" style="padding-right: 20px; background: #e6e6e6">
+    <app-social-media-links></app-social-media-links>
+</div>
 <p>frontpage works!</p>
 <p>frontpage works!</p>
 <p>frontpage works!</p>
