--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -9,25 +9,10 @@
                     [backgroundColor]="backgroundColor"
 ></app-section-header>
 
-<p>podcasts works111!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
-<p>podcasts works!</p>
+<!-- Featured podcast post -->
+<app-featured-podcast></app-featured-podcast>
+
+<!-- List podcast posts -->
+<app-podcasts-list></app-podcasts-list>
 
 
