--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -10,9 +10,11 @@
         <hr class="banner-hr">
     </div>
 
-    <div class="container">
-        <div class="navigation-item" *ngFor="let item of getMenuItems()">
-            <a class="menu-item" routerLink="{{ item.routerLink }}">{{ item.title }}</a>
+    <div>
+        <div class="container">
+            <div class="navigation-item" *ngFor="let item of getMenuItems()">
+                <a class="menu-item" routerLink="{{ item.routerLink }}">{{ item.title }}</a>
+            </div>
         </div>
     </div>
     <br>
