--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -16,3 +16,38 @@
 <p>about works!</p>
 <p>about works!</p>
 <p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
+<p>about works!</p>
