--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -9,45 +9,14 @@
                     [backgroundColor]="backgroundColor"
 ></app-section-header>
 
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
+<!-- About Debugged Labs -->
+
+<!-- About the team -->
+
+<p class="vert-padding large-cairo">I like trains</p>
+
+<!-- Keshav -->
+<app-about-post></app-about-post>
+<!-- Shawn -->
+<app-about-post></app-about-post>
+
