--- a/debuggedlabs-site/src/app/modules/social-media-links/social-media-links.component.html
+++ b/debuggedlabs-site/src/app/modules/social-media-links/social-media-links.component.html
@@ -1,6 +1,6 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="">
+<div>
     <a href="https://www.facebook.com/DebuggedLabs/" target="_blank" class="fa fa-facebook"></a>
     <a href="https://www.twitter.com/DebuggedLabs/"  target="_blank" class="fa fa-twitter"></a>
     <a href="https://www.instagram.com/debuggedlabsmedia/" target="_blank" class="fa fa-instagram"></a>
