--- a/debuggedlabs-site/src/styles.css
+++ b/debuggedlabs-site/src/styles.css
@@ -6,6 +6,7 @@
 .container {
   display: flex;
   justify-content: left;
+  text-align: left;
   align-items: center;
   left: 0;
 }
@@ -46,5 +47,6 @@
 }
 
 .float-right {
-  padding-right: 20px;
+  padding: 20px;
+  text-align: center;
 }
