Added config files, rudimentary mock data, types, interfaces, etc.

--- a/debuggedlabs-site/src/app/modules/social-media-links/social-media-links.component.html
+++ b/debuggedlabs-site/src/app/modules/social-media-links/social-media-links.component.html
@@ -1,9 +1,9 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div>
-    <a href="https://www.facebook.com/DebuggedLabs/" target="_blank" class="fa fa-facebook"></a>
-    <a href="https://www.twitter.com/DebuggedLabs/"  target="_blank" class="fa fa-twitter"></a>
-    <a href="https://www.instagram.com/debuggedlabsmedia/" target="_blank" class="fa fa-instagram"></a>
-    <a href="https://www.instagram.com/debuggedlabsmedia/" target="_blank" class="fa fa-rss"></a>
+    <a href="{{this.facebookLink}}" target="_blank" class="fa fa-facebook"></a>
+    <a href="{{this.twitterLink}}"  target="_blank" class="fa fa-twitter"></a>
+    <a href="{{this.instagramLink}}" target="_blank" class="fa fa-instagram"></a>
+    <a href="{{this.rssLink}}" target="_blank" class="fa fa-rss"></a>
 </div>
 
