Added mock podcast fetch service, rudimentary pagination settings

--- a/debuggedlabs-site/src/app/modules/featured-podcast/featured-podcast.component.html
+++ b/debuggedlabs-site/src/app/modules/featured-podcast/featured-podcast.component.html
@@ -1,1 +1,6 @@
-<p>featured-podcast works!</p>
+<div>
+    <p>
+        <em>{{this.podcastTitle}}</em>
+        {{this.episodeTitle}}
+    </p>
+</div>
