--- a/debuggedlabs-site/src/app/sections/technology/technology.component.html
+++ b/debuggedlabs-site/src/app/sections/technology/technology.component.html
@@ -9,6 +9,17 @@
                     [backgroundColor]="backgroundColor"
 ></app-section-header>
 
+<!-- Featured technology post -->
+<app-featured-variable-post></app-featured-variable-post>
+
+<app-featured-post></app-featured-post>
+
+<!-- Technology post list -->
+<app-posts-list></app-posts-list>
+
+<!-- Technology podcast list -->
+<app-podcasts-list></app-podcasts-list>
+
 <p>technology works!</p>
 <p>technology works!</p>
 <p>technology works!</p>
