Wiring up podcast-list and featured-podcast to podcast.component to be modular and adapt

--- a/debuggedlabs-site/src/app/modules/featured-podcast/featured-podcast.component.html
+++ b/debuggedlabs-site/src/app/modules/featured-podcast/featured-podcast.component.html
@@ -1,6 +1,5 @@
 <div>
     <p>
-        <em>{{this.podcastTitle}}</em>
-        {{this.episodeTitle}}
+       Show a featured podcast here!
     </p>
 </div>
