--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -10,12 +10,12 @@
 ></app-section-header>
 
 <!-- Featured podcast post -->
-<app-featured-podcast></app-featured-podcast>
+<app-featured-podcast *ngIf="isShowingFeaturedPost"
+                      [featuredPodcast]="featuredPodcast"
+></app-featured-podcast>
 
 <!-- List podcast posts -->
 <p>Displaying page index: {{this.pageNumber}}</p>
-<app-podcasts-list  [podcastSetNumber]="pageNumber"
-                    [isFeaturedPostShown]="isShowingFeaturedPost"
-></app-podcasts-list>
+<app-podcasts-list  [podcasts]="podcasts" ></app-podcasts-list>
 
 
