--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -9,14 +9,39 @@
                     [backgroundColor]="backgroundColor"
 ></app-section-header>
 
+<p class="vert-padding large-cairo">Nobody gets <em class="technology-sentence">technology</em>.  And <em class="science-sentence">science</em> is hard.</p>
+<br>
+<p class="horiz-padding large-cairo-em"><b>That's why we're here.</b></p>
+<br>
+<br>
+
 <!-- About Debugged Labs -->
+<hr class="abouut-hr">
+<p class="cairo-heading" align="center">WHO WE ARE</p>
+<hr class="abouut-hr">
+
+<p class="cairo-paragraph horiz-padding"><b>Debugged Labs</b> is a a <em class="science-sentence">podcast</em>-<em class="technology-sentence">blog</em> founded by two UCLA grads who resent 
+    gobbledygook. Our mission is to break down what's happening in technology, science, and society into byte-sized 
+    chunks that, <em class="about-sentence">well, make sense to the public.</em> The world is fast-changing and the people building tech and gadgets <b>aren't always
+    thinking about what it means for the rest of us.</b>
+</p>
+
+<p class="cairo-paragraph horiz-padding">We're here to ask those tough questions, and have a bit of fun while we're at it.</p>
+
+<br>
+<br>
 
 <!-- About the team -->
+<hr class="abouut-hr">
+<p class="cairo-heading" align="center">THE TEAM</p>
+<hr class="abouut-hr">
 
-<p class="vert-padding large-cairo">I like trains</p>
 
-<!-- Keshav -->
-<app-about-post></app-about-post>
-<!-- Shawn -->
-<app-about-post></app-about-post>
+<div class="horiz-padding">
+    <!-- Keshav -->
+    <app-about-post></app-about-post>
+
+    <!-- Shawn -->
+    <app-about-post></app-about-post>
+</div>
 
