Added assets for about page, TeamProfile config, etc.

--- a/debuggedlabs-site/src/app/sections/about/about-post/about-post.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about-post/about-post.component.html
@@ -1,1 +1,12 @@
-<p>about-post works!</p>
+<div class="image-inline">
+    <img src="{{ profile.imageUrl }}" class="image">
+    <div class="padding"></div>
+    <div class="text">
+        <p class="bioShort"><em>{{ profile.bioShort }}</em></p>
+        <p class="bio">{{ profile.bio }}</p>
+    </div>
+</div>
+<p class="name">{{ profile.name }}</p>
+<p class="position">{{ profile.position }}</p>
+<br>
+<br>
