--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
@@ -34,3 +34,10 @@
     height: 120px;
     width: 100%;
 }
+
+.hamburger-menu {
+  flex: 1 0 100%;
+  align-items: right;
+  justify-content: right;
+  align-content: right;
+}
