Making About page responsive to width

--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
@@ -37,7 +37,8 @@
 
 .hamburger-menu {
   flex: 1 0 100%;
-  align-items: right;
+  align-self: right;
   justify-content: right;
   align-content: right;
+  flex-direction: row;
 }
