--- a/debuggedlabs-site/src/app/sections/about/about-post/about-post.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about-post/about-post.component.html
@@ -1,12 +1,14 @@
-<div class="image-inline">
+<div [ngClass]="getImageInlineClass()">
     <img src="{{ profile.imageUrl }}" class="image">
+    <p class="name" *ngIf="showAltTitle()">{{ profile.name }}</p>
+    <p class="position" *ngIf="showAltTitle()">{{ profile.position }}</p>
     <div class="padding"></div>
     <div class="text">
         <p class="bioShort"><em>{{ profile.bioShort }}</em></p>
         <p class="bio">{{ profile.bio }}</p>
     </div>
 </div>
-<p class="name">{{ profile.name }}</p>
-<p class="position">{{ profile.position }}</p>
+<p class="name" *ngIf="!showAltTitle()">{{ profile.name }}</p>
+<p class="position" *ngIf="!showAltTitle()">{{ profile.position }}</p>
 <br>
 <br>
