Adding hamburger menu items precursor

--- a/debuggedlabs-site/src/app/navigation/navigation-bar/hamburger-menu/hamburger-menu-icon/hamburger-menu-icon.component.css
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/hamburger-menu/hamburger-menu-icon/hamburger-menu-icon.component.css
@@ -1,13 +1,17 @@
 .container {
   display: inline-block;
   cursor: pointer;
+  align-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .bar1, .bar2, .bar3 {
+  margin-left: auto;
   width: 35px;
   height: 5px;
   background-color:white;
-  margin: 6px 0;
+  margin-bottom: 6px;
   transition: 0.4s;
 }
 
