--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -24,6 +24,6 @@
 
     <!-- Show hamburger menu if smaller window -->
     <div class="hamburger-menu" *ngIf="isHamburgerMenu">
-        <app-hamburger-menu [menuItems]="getMenuItems()"></app-hamburger-menu>
+        <app-hamburger-menu-icon></app-hamburger-menu-icon>
     </div>
 </div>
