--- a/debuggedlabs-site/src/app/sections/about/about.component.html
+++ b/debuggedlabs-site/src/app/sections/about/about.component.html
@@ -3,6 +3,9 @@
 <!-- Padding under navbar -->
 <div class="page-content-spacing"></div>
 
+<!-- In case we have a hamburger menu-->
+<app-hamburger-menu-items [sectionTitle]="'about'"></app-hamburger-menu-items>
+
 <!-- Section header -->
 <app-section-header [sectionTitle]="'About us'" 
                     [iconUrl]="iconUrl"
