--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -1,5 +1,8 @@
 <div id="banner">
     <div class="banner">
+        <div class="hamburger-menu" *ngIf="shouldShowHamburgerMenu()">
+            <app-hamburger-menu-icon></app-hamburger-menu-icon>
+        </div>
         <div class="dbl-background">
             <img src="assets/logo/main_logo.png" class="banner-image">
         <div>
@@ -10,19 +13,20 @@
         <hr class="banner-hr">
     </div>
 
-    <div class="container banner-spacing">
+    <div class="container banner-spacing" *ngIf="!shouldShowHamburgerMenu()">
         <div class="logo-div-placeholder">
         </div>
 
         <!-- Show the menu items -->
-        <div class="navigation-item" *ngFor="let item of getMenuItems()">
-            <a [ngClass]="{
-                    'menu-item': !item.inactive, 
-                    'selected-nav-item': item.inactive
-                }" [ngStyle]="{'color': item.inactive ? item.selectedColor : ''}"
-                routerLink="{{ item.routerLink }}">{{ item.title }}</a>
-        </div>
-        <app-social-media-links></app-social-media-links>
+        <ng-container *ngIf="!shouldShowHamburgerMenu()">
+            <div class="navigation-item" *ngFor="let item of getMenuItems()">
+                <a [ngClass]="{
+                        'menu-item': !item.inactive, 
+                        'selected-nav-item': item.inactive
+                    }" [ngStyle]="{'color': item.inactive ? item.selectedColor : ''}"
+                    routerLink="{{ item.routerLink }}">{{ item.title }}</a>
+            </div>
+            <app-social-media-links></app-social-media-links>
+        </ng-container>
     </div>
-
 </div>
