--- a/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
+++ b/debuggedlabs-site/src/app/navigation/navigation-bar/navigation-bar.component.css
@@ -31,6 +31,7 @@
     box-shadow: 0 3px 12px 0 rgba(0,0,0,.08);
     position: fixed;
     top: 0;
+    left: 0;
     height: 120px;
     width: 100%;
 }
