--- a/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
+++ b/debuggedlabs-site/src/app/sections/podcasts/podcasts.component.html
@@ -1,10 +1,7 @@
-<app-navigation-bar [show]="true" [sectionTitle]="'podcasts'"></app-navigation-bar>
+<app-navigation-bar [show]="true"></app-navigation-bar>
 
 <!-- Padding under navbar -->
 <div class="page-content-spacing"></div>
-
-<!-- In case we have a hamburger menu-->
-<app-hamburger-menu-items [sectionTitle]="'podcasts'"></app-hamburger-menu-items>
 
 <!-- Section header -->
 <app-section-header [sectionTitle]="'Podcasts'" 
