Fully functional navigation, hambuger menu, and error handling in place

--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.html
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div id="banner">
+<div #bannerId>
     <div class="banner">
         <div class="hamburger-menu" *ngIf="shouldShowHamburgerMenu()">
             <app-hamburger-menu-icon></app-hamburger-menu-icon>
