--- a/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
+++ b/debuggedlabs-site/src/app/sections/frontpage/frontpage.component.html
@@ -1,6 +1,10 @@
 <app-navigation-bar [show]="false" [bannerElementId]="'banner'"></app-navigation-bar>
 <app-banner></app-banner>
 <p>frontpage works!</p>
+
+<!-- Show featured post -->
+<app-featured-post [featuredPost]="this.featuredPost"></app-featured-post>
+
 <p>frontpage works!</p>
 <p>frontpage works!</p>
 <p>frontpage works!</p>
